[package]
name = "gerg_ui"
version = "0.1.2"
authors = [ "Greg Moller <greg.moller@gmail.com>" ]
edition = "2018"
description = "A little wrapper I've written for creating UI screens from files for the BevyEngine."
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [ "gamedev", "Bevy" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
