[package]
name = "gerg_ui"
version = "0.1.8"
authors = [ "Greg Moller <greg.moller@gmail.com>" ]
edition = "2018"
description = "A little wrapper I've written for creating UI screens from files for the BevyEngine."
readme = "README.md"
repository = "https://github.com/gmoller/gerg-ui"
license = "MIT OR Apache-2.0"
keywords = [ "gamedev", "Bevy" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
bevy_mod_debug_console = "0.0.2"
hex = "0.4.3"
phf = { version = "0.10.0", features = ["macros"] }
